Fixes and Enhancements since Version 0.5 alpha 3

 - There is a new 'config.getStreamFactory' generic function, to make it easy
   to accept URLs, filenames, or 'naming.IStreamFactory' objects as the source
   of a "file".

   Its typical usage is just::

       factory = config.getStreamFactory(self,source)
       stream = factory.open('t')  # open for reading in text mode

   where 'source' is a string or a 'naming.IStreamFactory', and 'self' is a
   component to be used as lookup context.  The returned 'factory' is a
   'naming.IStreamFactory' that can then be '.open()'-ed for reading, or used
   in other ways as needed.

   If you have special objects that you'd like to be able to treat as stream
   sources, you can register them by defining an extension, e.g.::

    [config.getStreamFactory.when(MyType)]
    def getStreamFactory(context,source):
        """Return a naming.IStreamFactory for 'source' (a 'MyType' instance)"""

   Wherever practical, as we encounter them, we'll be changing PEAK API's that
   take filenames to also accept stream sources.

 - Added an optional 'base' argument to 'naming.parseURL()', to allow parsing
   URLs relative to a base URL.  For a URL scheme to support this, it must
   implement the new 'naming.IBaseURL' interface.  See the
   'peak.naming.factories.openable' module for example implementations.

 - Added a 'data:' URL scheme, implementing RFC 2397 (although it's not as
   strict in its parsing of the content type and parameters as the RFC calls
   for).  This is a semi-convenient way to provide configuration data in-line,
   since a 'data:' URL can be a 'config.getStreamFactory()' source.

 - Added 'config.processXML()', a function that provides a high-level,
   configuration-driven interface to 'peak.util.SOX.NegotiatingParser'.  This
   simple front-end lets you supply as little as a configuration context and
   a stream source, to do XML processing of arbitrary complexity, controlled by